# yak

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-06-yak-cache.md  2026-07-06-yak-translation-cli.md  2026-07-07-yak-auto-dictionary.md  2026-07-08-yak-oneline.md
docs/superpowers/specs/: 2026-07-06-yak-cache-design.md  2026-07-06-yak-translation-cli-design.md  2026-07-07-yak-auto-dictionary-design.md  2026-07-08-yak-oneline-design.md
src/yak/: cache.py  errors.py  history.py  interactive.py  main.py  models.py  render.py
src/yak/backends/: base.py  openai.py
tests/: test_cache.py  test_cli.py  test_history.py  test_interactive.py  test_models.py  test_openai_backend.py  test_render.py
