[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yak"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "diskcache>=5.6.3",
    "openai>=2.44.0",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
]

[project.scripts]
yak = "yak.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yak"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "diskcache.*"
ignore_missing_imports = true
